--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
 body {
-  background-color: white;
+  background-color: rgb(78, 78, 78);
+  font-family: 'Marcellus SC', serif;
+  text-align: center;
 }
+
+button{
+  background-color:rgb(197, 197, 197);
+  color: black;
+  border-width: 2px;
+  border-color: rgb(87, 87, 87);
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin-top: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 100px;
+  
+}
+
+div {
+  border: 5px solid black;
+  background-color: honeydew;
+  text-align: left;
+  margin-top: 5px;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
